5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1630_2924.log
== TEST (2019-04-02 16:19:21) 
-- CODE:
s = int(input("posicao final do movel:"))
s0 = int(input("posical inicial do movel:"))
v = int(input("velocidade do movel:"))
t = int(input("intervalo de tempo:"))

S = S0 + vt
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:20:30) 
-- CODE:
S = int(input("posicao final do movel:"))
S0 = int(input("posical inicial do movel:"))
v = int(input("velocidade do movel:"))
t = int(input("intervalo de tempo:"))

S = S0 + vt
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:42) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

S = S0 + vt
print(S)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:36) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

S = int(S0 + vt)
print(S)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:37) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

S = int(S0 + vt)
print(S)
-- EXECUTION TIME:
0.181295
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:39) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

S = int(S0 + vt)
print(S)
-- EXECUTION TIME:
0.136595
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:39) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

S = int(S0 + vt)
print(S)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:24:58) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

var = (a = b +c*d)
print(S)
-- EXECUTION TIME:
0.157761
-- ERROR:
  File "/home/codebench/codes/1630/2924/main.py", line 6
    var = (a = b +c*d)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:00) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

var = (a = b +c*d)
print(S)
-- ERROR:
File "XXXX", line 6
    var = (a = b +c*d)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:25:21) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

var = int(a = b +c*d)
print(S)
-- EXECUTION TIME:
0.127238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:21) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

var = int(a = b +c*d)
print(S)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:09) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = (c*d)
z = (b +x)
w = z
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:27:26) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = (c*d)
z = (b +x)
w = z
print(w)

-- EXECUTION TIME:
0.214355
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:28:16) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = (c*d)
z = (b +x)
w = z
print(x)
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:28:30) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = (c*d)
z = (b +x)
w = z
print(x)
print(z)
print(w)

-- EXECUTION TIME:
0.195101
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:28:56) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b +x)
w = z
print(x)
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:29:14) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b +x)
w = z
print(x)
print(z)
print(w)

-- EXECUTION TIME:
0.202826
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:37) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:29:38) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- EXECUTION TIME:
0.128903
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:29:40) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- EXECUTION TIME:
0.134039
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:40) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:30:07) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- EXECUTION TIME:
0.173162
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:30:45) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- EXECUTION TIME:
0.158636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:46) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:30:48) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- EXECUTION TIME:
0.111554
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:30:49) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- EXECUTION TIME:
0.209822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:30:49) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- EXECUTION TIME:
0.148952
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:49) 
-- CODE:
a = int(input())
b = int(input())
c = int(input())
d = int(input())

x = int(c*d)
z = int(b +x)
w = int(z)
print(x)
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:31:28) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b +x)
w = int(z)
print(x), "m"
print(z)
print(w)

-- EXECUTION TIME:
0.284755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:28) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b +x)
w = int(z)
print(x), "m"
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:31:47) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b +x)
w = int(z)
print(x), "m"
print(z)
print(w)

-- EXECUTION TIME:
0.208468
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:32) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b+x)
w = int(z)
print(x), 
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:36:20) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(b+x)
w = int(z)
print(x), 
print(z)
print(w)

-- EXECUTION TIME:
0.146998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:31) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(x+b)
w = int(z)
print(x), 
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:37:55) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(x+b)
w = int(z)
print(x), 
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:38:32) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(x+b)
w = int(z)
print(x), 
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:38:33) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(x+b)
w = int(z)
print(x), 
print(z)
print(w)

-- EXECUTION TIME:
0.165235
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:29) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(x+b) 
w = int(z)
print(x)
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:41:29) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(x+b) 
w = int(z)
print(x)
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:42:18) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(x+b) 
w = int(z)
print(x)
print(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:22) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = int(c*d)
z = int(x+b) 
w = int(z)
print(x)
print(z)
print(w)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:03) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = input(c*d)
z = input(x+b) 
w = input(z)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:47:12) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = input(c*d)
z = input(x+b) 
w = input(z)

pf = input(w)


-- EXECUTION TIME:
0.146521
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:12) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = input(c*d)
z = input(x+b) 
w = input(z)

pf = input(w)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:47:35) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = input(c*d)
z = input(x+b) 
w = input(z)

pf = input(w)


-- EXECUTION TIME:
0.148723
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:02) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:51:08) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = (c*d)
z = (b+x)
w = z

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:51:28) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = (c*d)
z = (b+x)
w = z

-- EXECUTION TIME:
0.234544
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:51:40) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = (c*d)
z = (b+x)
w = z
print(w)

-- EXECUTION TIME:
0.140525
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input("intervalo de tempo:"))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:52:08) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = input(c*d)
z = input(b+x)
w = input(z)
print(w)

-- EXECUTION TIME:
0.19135
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2924/main.py", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:09) 
-- CODE:
a = int(input("posicao final do movel:"))
b = int(input("posical inicial do movel:"))
c = int(input("velocidade do movel:"))
d = int(input("intervalo de tempo:"))

x = input(c*d)
z = input(b+x)
w = input(z)
print(w)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
